syntax = "proto3";

package blog;

import "google/protobuf/timestamp.proto";

option go_package = "./blog";

message Post {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    google.protobuf.Timestamp publication_date = 5;
    repeated string tags = 6;
}

service BlogService {
    // Create a new blog post
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);

    // Read a blog post by its ID
    rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);

    // Update an existing blog post
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);

    // Delete a blog post by its ID
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author = 3;
    google.protobuf.Timestamp publication_date = 4;
    repeated string tags = 5;
}

message CreatePostResponse {
    Post post = 1;
    string error_message = 2;
}

message ReadPostRequest {
    string post_id = 1;
}

message ReadPostResponse {
    Post post = 1;
    string error_message = 2;
}

message UpdatePostRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    repeated string tags = 5;
}

message UpdatePostResponse {
    Post post = 1;
    string error_message = 2;
}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {
    bool success = 1;
    string error_message = 2;
}
